--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "mqtt": "^2.9.2",
-    "rxjs": "^5.4.2"
+    "rxjs": "^5.4.2",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {},
   "scripts": {
