changed to gulp build structure

--- a/.gitignore
+++ b/.gitignore
@@ -28,15 +28,6 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# Framer Specific
-.*.html
-.app.js
-framer/*.old*
-framer/.*.hash
-framer/backup.coffee
-framer/backups/*
-framer/manifest.txt
-framer/preview.png
-framer/social-*x*.png
-
 node_modules/*
+
+build/*
